kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: frontend
  namespace: hipster-shop
spec:
  rules:
  - host: shop.35.246.139.124.nip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - shop.35.246.139.124.nip.io
    secretName: shop.35.246.139.124.nip.io
